adjusted to quarkus usage